--- a/rainbow.html
+++ b/rainbow.html
@@ -1,21 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>Rainbow Game</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="rainbow.css" type="text/css">
-    
+
 </head>
+
 <body>
-    <div>
-        <h1>Rainbow</h1>
-        <p>It has lots of colours and is lovely.</p>
-        <p>Sun plus the atmosphere produces this awesome effect.</p>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+
+                <h1>Rainbow</h1>
+
+                <img src="1399.ngsversion.1538507346716.adapt.1900.1.jpg" width="600px" alt="a rainbow standing here"
+                    title="The rainboooww !!!" />
+
+                <div class="textAlignment">
+                    <p>Sun plus the atmosphere produces this awesome effect.</p>
+                    <p>It has lots of colours and is lovely.</p>
+                </div>
+
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12">
+
+            </div>
+        </div>
+
     </div>
 
 
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
